--- a/教程/调教百度，给你安排得明明白白的.md
+++ b/教程/调教百度，给你安排得明明白白的.md
@@ -9,7 +9,7 @@
 可以说这是使用百度搜索时必装的一个脚本。作者也是 Firefox 的爱好者，脚本的功能很全面，包括去除链接重定向、移除推广链接、移除百度百家号内容、移除右侧栏，还有双列模式等。
 
 ::: hljs-center
-![capture_20200526195209877.bmp](1)
+![capture_20200526195209877.JPG](1)
 
 （屏蔽低质量搜索结果 ↑）
 
