--- a/教程/调教百度，给你安排得明明白白的.md
+++ b/教程/调教百度，给你安排得明明白白的.md
@@ -46,7 +46,7 @@
 
 
 # 三、调教百度经验
-## 调教方案  ** 1：[百度经验-屏蔽与排版](https://greasyfork.org/zh-CN/scripts/381414-baidu-jingyan-%E7%99%BE%E5%BA%A6%E7%BB%8F%E9%AA%8C-%E7%9B%AE%E5%BD%95%E5%88%97%E8%A1%A8)   2：[百度经验目录列表](https://greasyfork.org/zh-CN/scripts/381414-baidu-jingyan-%E7%99%BE%E5%BA%A6%E7%BB%8F%E9%AA%8C-%E7%9B%AE%E5%BD%95%E5%88%97%E8%A1%A8)**
+## 调教方案  **1：[百度经验-屏蔽与排版](https://greasyfork.org/zh-CN/scripts/381414-baidu-jingyan-%E7%99%BE%E5%BA%A6%E7%BB%8F%E9%AA%8C-%E7%9B%AE%E5%BD%95%E5%88%97%E8%A1%A8)    2：[百度经验目录列表](https://greasyfork.org/zh-CN/scripts/381414-baidu-jingyan-%E7%99%BE%E5%BA%A6%E7%BB%8F%E9%AA%8C-%E7%9B%AE%E5%BD%95%E5%88%97%E8%A1%A8)**
 去掉百度经验广告和多余的模块，并精简内容排版，同时右上角创建一个目录表，方便在章节间快速切换。
 ::: hljs-center
 
@@ -63,7 +63,7 @@
 
 
 # 四、调教百度百科
-## 调教方案 **1:百度经验-屏蔽与排版(https://userstyles.org/styles/130739/theme)2:[百度百科添加维基镜像](https://greasyfork.org/zh-CN/scripts/36100-%E7%99%BE%E5%BA%A6%E7%99%BE%E7%A7%91%E6%B7%BB%E5%8A%A0%E7%BB%B4%E5%9F%BA%E9%95%9C%E5%83%8F)。3:[百度百科无水印图片查看](https://greasyfork.org/zh-CN/scripts/16607-%E7%99%BE%E5%BA%A6%E7%99%BE%E7%A7%91-%E6%97%A0%E6%B0%B4%E5%8D%B0%E5%9B%BE%E7%89%87%E6%9F%A5%E7%9C%8B)**
+## 调教方案 **1:[百度经验-屏蔽与排版](https://userstyles.org/styles/130739/theme)  2:[百度百科添加维基镜像](https://greasyfork.org/zh-CN/scripts/36100-%E7%99%BE%E5%BA%A6%E7%99%BE%E7%A7%91%E6%B7%BB%E5%8A%A0%E7%BB%B4%E5%9F%BA%E9%95%9C%E5%83%8F)。3:[百度百科无水印图片查看](https://greasyfork.org/zh-CN/scripts/16607-%E7%99%BE%E5%BA%A6%E7%99%BE%E7%A7%91-%E6%97%A0%E6%B0%B4%E5%8D%B0%E5%9B%BE%E7%89%87%E6%9F%A5%E7%9C%8B)**
 ::: hljs-center
 
 ![7a6a15d5gy1g22djzn8o4j20ym0jrwgs.jpg](8)
@@ -72,9 +72,9 @@
 
 （百度百科 After ↓）
 
-![7a6a15d5gy1g231r4owgaj20ym0jrdht.jpg](7)
+![7a6a15d5gy1g231r4owgaj20ym0jrdht.jpg](9)
 
-![7a6a15d5gy1g22dknwyo0j20yn0jr47s.jpg](9)
+![7a6a15d5gy1g22dknwyo0j20yn0jr47s.jpg](10)
 
 
 :::
