--- a/教程/调教百度，给你安排得明明白白的.md
+++ b/教程/调教百度，给你安排得明明白白的.md
@@ -80,7 +80,7 @@
 :::
 
 # 五、调教百度贴吧
-调教方案：**[贴吧全能助手](https://greasyfork.org/zh-CN/scripts/26992-%E8%B4%B4%E5%90%A7%E5%85%A8%E8%83%BD%E5%8A%A9%E6%89%8B)**
+## 调教方案：**[贴吧全能助手](https://greasyfork.org/zh-CN/scripts/26992-%E8%B4%B4%E5%90%A7%E5%85%A8%E8%83%BD%E5%8A%A9%E6%89%8B)**
 目前遇到最好用的贴吧增强脚本，玩贴吧需要的各项功能，只装这一个就够了，包括免登录查看、广告模块去除、跳转链接移除、看贴吧用户发言记录、直接在当前页面查看图片原图、以及全面精简并美化各种贴吧页面。
 ::: hljs-center
 
@@ -97,7 +97,7 @@
 
 
 # 六、调教百度网盘
-调教方案 1:[百度网盘下载助手](https://greasyfork.org/zh-CN/scripts/378301-%E7%BD%91%E7%9B%98%E5%8A%A9%E6%89%8B)  2:[网盘助手](https://greasyfork.org/zh-CN/scripts/378301-%E7%BD%91%E7%9B%98%E5%8A%A9%E6%89%8B)
+## 调教方案 1:[百度网盘下载助手](https://greasyfork.org/zh-CN/scripts/378301-%E7%BD%91%E7%9B%98%E5%8A%A9%E6%89%8B)  2:[网盘助手](https://greasyfork.org/zh-CN/scripts/378301-%E7%BD%91%E7%9B%98%E5%8A%A9%E6%89%8B)
 
 除了最常用的网盘加速下载功能，在使用百度网盘里，你可能还需要有这样的功能，比如自动填写提取码、自定义提取码、解除别人分享的视频只能观看一分钟的限制等。
 
@@ -112,7 +112,7 @@
 
 
 # 七、调教百度文库
-调教方案：[网页限制解除(改)](https://greasyfork.org/zh-CN/scripts/28497-remove-web-limits-modified)
+## 调教方案：[网页限制解除(改)](https://greasyfork.org/zh-CN/scripts/28497-remove-web-limits-modified)
 
 复制网页内容
 ::: hljs-center
