--- a/教程/百度精简/调教百度，给你安排得明明白白的.md
+++ b/教程/百度精简/调教百度，给你安排得明明白白的.md
@@ -9,7 +9,7 @@
 可以说这是使用百度搜索时必装的一个脚本。作者也是 Firefox 的爱好者，脚本的功能很全面，包括去除链接重定向、移除推广链接、移除百度百家号内容、移除右侧栏，还有双列模式等。
 
 ::: hljs-center
-![02.jpg](4)![03.jpg](5)![04.jpg](6)![05.jpg](7)![06.jpg](8)![07.jpg](9)![7a6a15d5gy1g22kw3s1dqj21hc0pae0h.jpg](10)![7a6a15d5gy1g2280nap9tj20w70h1jsp.jpg](11)![08.jpg](12)![09.jpg](13)![10.jpg](14)![11.jpg](15)![12.jpg](16)![13.jpg](17)![01.jpg](3)![capture_20200526195209877.JPG](1)
+![](教程/百度精简/01.jpg)
 
 （屏蔽低质量搜索结果 ↑）
 
@@ -20,8 +20,7 @@
 只有百度或者只用谷歌，有时都不能满足搜索需要，有时你甚至还需要同时搜索百度和谷歌，那么这个脚本就帮上忙了。它可以方便的在各个搜索引擎之间跳转,有可视化设置菜单，能更友好的自定义设置。
 
 ::: hljs-center
-
-![7a6a15d5gy1g5ch8rxnf0j20j80clglx.jpg](2)
+![7a6a15d5gy1g5ch8rxnf0j20j80clglx.jpg](2))
 
 :::
 
