--- a/教程/百度精简/调教百度，给你安排得明明白白的.md
+++ b/教程/百度精简/调教百度，给你安排得明明白白的.md
@@ -11,8 +11,7 @@
 ::: hljs-center
 
 
-![屏蔽低质量搜索结果](https:://github.com/disturb-yy/GitNote-image/master/gitnote/2020/05/26/01-1590508622659.jpg?token=AJGNWAVSDN3I6B2C4JWB7JS6ZU6I4)
-
+![title](https://raw.githubusercontent.com/disturb-yy/GitNote-image/master/gitnote/2020/05/27/01-1590546632641.jpg?token=AJGNWAX76H6NQYGVPFLVQS26ZXIQ6)
 :::
 
 
