--- a/教程/百度精简/调教百度，给你安排得明明白白的.md
+++ b/教程/百度精简/调教百度，给你安排得明明白白的.md
@@ -19,8 +19,8 @@
 只有百度或者只用谷歌，有时都不能满足搜索需要，有时你甚至还需要同时搜索百度和谷歌，那么这个脚本就帮上忙了。它可以方便的在各个搜索引擎之间跳转,有可视化设置菜单，能更友好的自定义设置。
 
 ::: hljs-center
-![7a6a15d5gy1g5ch8rxnf0j20j80clglx.jpg](2))
 
+![title](../../.local/static/2020/4/3/02.1590546976625.jpg)
 :::
 
 
