--- a/教程/百度精简/调教百度，给你安排得明明白白的.md
+++ b/教程/百度精简/调教百度，给你安排得明明白白的.md
@@ -1,6 +1,7 @@
 # 导读
 精简百度各网站的广告，界面等，去除一些无用的功能
-原作者：奔跑中的奶酪    [文章来源](https://www.runningcheese.com/baidu-modification)
+原作者：奔跑中的奶酪    
+[文章来源](https://www.runningcheese.com/baidu-modification)
 # 一、调教百度搜索
 
 网页搜索是百度最核心的产品，其搜索质量一直为人所诟病，前有“魏则西事件”，后有“百度已死事件”，但除了谷歌以外，你很难再找得出比它更好的中文搜索引擎了。
@@ -10,17 +11,18 @@
 
 ::: hljs-center
 
-
-![title](https://raw.githubusercontent.com/disturb-yy/GitNote-image/master/gitnote/2020/05/27/01-1590546632641.jpg?token=AJGNWAX76H6NQYGVPFLVQS26ZXIQ6)
 :::
 
 
 ## 调教方案 2：**[searchEngineJump](https://greasyfork.org/zh-CN/scripts/27752-searchenginejump-%E6%90%9C%E7%B4%A2%E5%BC%95%E6%93%8E%E5%BF%AB%E6%8D%B7%E8%B7%B3%E8%BD%AC)**
 只有百度或者只用谷歌，有时都不能满足搜索需要，有时你甚至还需要同时搜索百度和谷歌，那么这个脚本就帮上忙了。它可以方便的在各个搜索引擎之间跳转,有可视化设置菜单，能更友好的自定义设置。
 
+
 ::: hljs-center
 
 ![title](../../.local/static/2020/4/3/02.1590546976625.jpg)
+
+
 :::
 
 
