--- a/教程/百度精简/调教百度，给你安排得明明白白的.md
+++ b/教程/百度精简/调教百度，给你安排得明明白白的.md
@@ -10,7 +10,7 @@
 可以说这是使用百度搜索时必装的一个脚本。作者也是 Firefox 的爱好者，脚本的功能很全面，包括去除链接重定向、移除推广链接、移除百度百家号内容、移除右侧栏，还有双列模式等。
 
 ::: hljs-center
-
+![title](../../.local/static/2020/4/3/01.1590548601072.JPG)
 :::
 
 
@@ -31,16 +31,13 @@
 
 去掉百度知道广告和多余的模块，并精简内容排版。
 ::: hljs-center
-
-
-![7a6a15d5gy1g22am8jzjkj20wu0jpta8.jpg](7)
+![title](../../.local/static/2020/4/3/03.1590548625311.jpg)
 
 （百度知道 Before ↑）
 
 （百度知道 After ↓）
 
-
-![7a6a15d5gy1g22amux2csj20wu0jp3z3.jpg](4)
+![title](../../.local/static/2020/4/3/04.1590548649367.jpg)
 
 :::
 
@@ -50,7 +47,7 @@
 去掉百度经验广告和多余的模块，并精简内容排版，同时右上角创建一个目录表，方便在章节间快速切换。
 ::: hljs-center
 
-![7a6a15d5gy1g22bu9iq3wj20xk0jpta2.jpg](5)
+
 
 （百度经验 Before ↑）
 
