--- a/教程/百度精简/调教百度，给你安排得明明白白的.md
+++ b/教程/百度精简/调教百度，给你安排得明明白白的.md
@@ -47,14 +47,13 @@
 去掉百度经验广告和多余的模块，并精简内容排版，同时右上角创建一个目录表，方便在章节间快速切换。
 ::: hljs-center
 
-
+![title](../../.local/static/2020/4/3/05.1590548660794.jpg)
 
 （百度经验 Before ↑）
 
 （百度经验 After ↓）
 
-
-![7a6a15d5gy1g22bwtif14j20xk0jpdgu.jpg](6)
+![title](../../.local/static/2020/4/3/06.1590548667132.jpg)
 
 :::
 
@@ -62,17 +61,14 @@
 # 四、调教百度百科
 ## 调教方案 **1:[百度经验-屏蔽与排版](https://userstyles.org/styles/130739/theme)  2:[百度百科添加维基镜像](https://greasyfork.org/zh-CN/scripts/36100-%E7%99%BE%E5%BA%A6%E7%99%BE%E7%A7%91%E6%B7%BB%E5%8A%A0%E7%BB%B4%E5%9F%BA%E9%95%9C%E5%83%8F)。3:[百度百科无水印图片查看](https://greasyfork.org/zh-CN/scripts/16607-%E7%99%BE%E5%BA%A6%E7%99%BE%E7%A7%91-%E6%97%A0%E6%B0%B4%E5%8D%B0%E5%9B%BE%E7%89%87%E6%9F%A5%E7%9C%8B)**
 ::: hljs-center
-
-![7a6a15d5gy1g22djzn8o4j20ym0jrwgs.jpg](8)
+![title](../../.local/static/2020/4/3/07.1590548675795.jpg)
 
 （百度百科 Before ↑）
 
 （百度百科 After ↓）
+![title](../../.local/static/2020/4/3/08.1590548684456.jpg)
 
-![7a6a15d5gy1g231r4owgaj20ym0jrdht.jpg](9)
-
-![7a6a15d5gy1g22dknwyo0j20yn0jr47s.jpg](10)
-
+![title](../../.local/static/2020/4/3/09.1590548693738.jpg)
 
 :::
 
@@ -81,14 +77,11 @@
 目前遇到最好用的贴吧增强脚本，玩贴吧需要的各项功能，只装这一个就够了，包括免登录查看、广告模块去除、跳转链接移除、看贴吧用户发言记录、直接在当前页面查看图片原图、以及全面精简并美化各种贴吧页面。
 ::: hljs-center
 
-![7a6a15d5gy1g226egjmo5j20w70id130.jpg](11)
-
+![title](../../.local/static/2020/4/3/10.1590548706863.jpg)
 （百度贴吧 Before ↑）
 
 （百度贴吧 After ↓）
-
-
-![7a6a15d5gy1g226iiwteqj20w70ietiw.jpg](12)
+![title](../../.local/static/2020/4/3/11.1590548714134.jpg)
 
 :::
 
@@ -99,8 +92,7 @@
 除了最常用的网盘加速下载功能，在使用百度网盘里，你可能还需要有这样的功能，比如自动填写提取码、自定义提取码、解除别人分享的视频只能观看一分钟的限制等。
 
 ::: hljs-center
-
-![7a6a15d5gy1g22kdbf7jhj20rp0fddi1.jpg](13)
+![title](../../.local/static/2020/4/3/12.1590548721451.jpg)
 
 （百度网盘助手 ↑）
 
@@ -113,8 +105,7 @@
 
 复制网页内容
 ::: hljs-center
-
-![复制网页内容.PNG](2)
+![title](../../.local/static/2020/4/3/13.1590548727605.PNG)
 
 :::
 
