--- a/教程/百度精简/调教百度，给你安排得明明白白的.md
+++ b/教程/百度精简/调教百度，给你安排得明明白白的.md
@@ -43,7 +43,7 @@
 
 
 # 三、调教百度经验
-## 调教方案  **1：[百度经验-屏蔽与排版](https://greasyfork.org/zh-CN/scripts/381414-baidu-jingyan-%E7%99%BE%E5%BA%A6%E7%BB%8F%E9%AA%8C-%E7%9B%AE%E5%BD%95%E5%88%97%E8%A1%A8)    2：[百度经验目录列表](https://greasyfork.org/zh-CN/scripts/381414-baidu-jingyan-%E7%99%BE%E5%BA%A6%E7%BB%8F%E9%AA%8C-%E7%9B%AE%E5%BD%95%E5%88%97%E8%A1%A8)**
+## 调教方案  **1：[百度经验-屏蔽与排版](https://userstyles.org/styles/132605/theme)    2：[百度经验目录列表](https://greasyfork.org/zh-CN/scripts/381414-baidu-jingyan-%E7%99%BE%E5%BA%A6%E7%BB%8F%E9%AA%8C-%E7%9B%AE%E5%BD%95%E5%88%97%E8%A1%A8)**
 去掉百度经验广告和多余的模块，并精简内容排版，同时右上角创建一个目录表，方便在章节间快速切换。
 ::: hljs-center
 
