--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -1,6 +1,6 @@
 # 相关软件下载
-Python
-FFMPEG
+[Python](https://www.python.org/ftp/python/2.7.12/python-2.7.12.msi)
+[FFMPEG]()
 AutoInstall autosub_app 0.3.12.zip
 SampleVideos Spanish - English.zip
 Subtitle Editor Aegisub
