--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -4,3 +4,16 @@
 AutoInstall autosub_app 0.3.12.zip
 SampleVideos Spanish - English.zip
 Subtitle Editor Aegisub
+
+
+# 安装教程
+## **1.安装python**
+![title](../../.local/static/2020/4/3/安装python.1590582082788.png)
+## **2.Run cmd (Win+R)**
+C:\Python27\Scripts\pip.exe install autosub
+Or
+C:\Python27\Scripts\pip.exe install https://pypi.python.org/packages/35/7b/9d5361c0f7abfcc6d826a5279b1c4501f7616505629f6c54857587ec6e37/autosub-0.3.9.tar.gz
+or
+(Download Last version autosub https://pypi.python.org/pypi/autosub)
+C:\Python27\Scripts\pip.exe install "c:\youdownloaded\autosub-0.3.9.tar.gz"
+
