--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -1,6 +1,6 @@
 # 相关软件下载
 [Python](https://www.python.org/ftp/python/2.7.12/python-2.7.12.msi)
-[FFMPEG]()
+[FFMPEG](https://ffmpeg.zeranoe.com/builds/)
 AutoInstall autosub_app 0.3.12.zip
 SampleVideos Spanish - English.zip
 Subtitle Editor Aegisub
@@ -9,6 +9,7 @@ Subtitle Editor Aegisub
 # 安装教程
 ## **1.安装python**
 ![title](../../.local/static/2020/4/3/安装python.1590582082788.png)
+
 ## **2.Run cmd (Win+R)**
 C:\Python27\Scripts\pip.exe install autosub
 Or
@@ -16,5 +17,31 @@ C:\Python27\Scripts\pip.exe install https://pypi.python.org/packages/35/7b/9d536
 or
 [Download Last version autosub ](https://pypi.python.org/pypi/autosub)
 C:\Python27\Scripts\pip.exe install "c:\youdownloaded\autosub-0.3.9.tar.gz"
+
+## **3.修改文件名  "autosub" to "autosub_app.py"**
+------cmd命令  C:\Python27\Scripts\autosub autosub_app.py--------
+
+## **4.修改autosub_app.py
+4.1 In line 48 add ", delete=False"
+temp = tempfile.NamedTemporaryFile(suffix='.flac')
+by
+temp = tempfile.NamedTemporaryFile(suffix='.flac', delete=False)
+4.2 Eliminate line 53 os.system('stty sane'). (Optional)
+UPDATE For last Version Autosub (23 May 2017)
+In Windows xp,7,8,10
+With Program Notepad change lines :
+Line 127 change
+exe_file = os.path.join(path, program)
+exe_file = os.path.join(path, program + ".exe")
+Line 47 change
+temp = tempfile.NamedTemporaryFile(suffix='.flac')
+temp = tempfile.NamedTemporaryFile(suffix='.flac', delete=False)
+
+Download(https://ffmpeg.zeranoe.com/builds/) and
+Copy ffmpeg.exe to C:\Python27\
+
+Restart Windows
+
+Test Script C:\Python27\python.exe C:\Python27\scripts\autosub_app.py --list-languages
 
 
