--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -21,21 +21,15 @@ C:\Python27\Scripts\pip.exe install "c:\youdownloaded\autosub-0.3.9.tar.gz"
 ## **3.修改文件名  "autosub" to "autosub_app.py"**
 ------cmd命令  C:\Python27\Scripts\autosub autosub_app.py--------
 
-## **4.修改autosub_app.py
-4.1 In line 48 add ", delete=False"
+## **4.修改autosub_app.py文件**
+### 4.1 在47行添加", delete=False"
 temp = tempfile.NamedTemporaryFile(suffix='.flac')
-by
-temp = tempfile.NamedTemporaryFile(suffix='.flac', delete=False)
-4.2 Eliminate line 53 os.system('stty sane'). (Optional)
-UPDATE For last Version Autosub (23 May 2017)
-In Windows xp,7,8,10
-With Program Notepad change lines :
-Line 127 change
+修改成
+temp = tempfile.NamedTemporaryFile(suffix='.flac'**, delete=False**)
+### 4.2 删除53行的os.system('stty sane'). (Optional)
+### 4.3 Line 127 change
 exe_file = os.path.join(path, program)
-exe_file = os.path.join(path, program + ".exe")
-Line 47 change
-temp = tempfile.NamedTemporaryFile(suffix='.flac')
-temp = tempfile.NamedTemporaryFile(suffix='.flac', delete=False)
+exe_file = os.path.join(path, program** + ".exe"**)
 
 Download(https://ffmpeg.zeranoe.com/builds/) and
 Copy ffmpeg.exe to C:\Python27\
