--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -30,12 +30,13 @@ temp = tempfile.NamedTemporaryFile(suffix='.flac'**, delete=False**)
 ### 4.3 Line 127 change
 exe_file = os.path.join(path, program)
 exe_file = os.path.join(path, program** + ".exe"**)
-
+## **5.ffmpeg布置**
 Download(https://ffmpeg.zeranoe.com/builds/) and
 Copy ffmpeg.exe to C:\Python27\
 
-Restart Windows
+## **6.Restart Windows**
 
-Test Script C:\Python27\python.exe C:\Python27\scripts\autosub_app.py --list-languages
+## **7.Test Script C:\Python27\python.exe C:\Python27\scripts\autosub_app.py --list-languages**
+
 
 
