--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -6,7 +6,7 @@ SampleVideos Spanish - English.zip
 Subtitle Editor Aegisub
 
 
-# 安装教程
+# **安装教程**
 ## **1.安装python**
 ![title](../../.local/static/2020/4/3/安装python.1590582082788.png)
 
@@ -37,6 +37,27 @@ Copy ffmpeg.exe to C:\Python27\
 ## **6.Restart Windows**
 
 ## **7.Test Script C:\Python27\python.exe C:\Python27\scripts\autosub_app.py --list-languages**
+![测试成功](../../.local/static/2020/4/3/安装python.1590582921022.png)
+
+# **自动生成字幕**
+**1.Spanish**
+C:\Python27\python.exe C:\Python27\scripts\autosub_app.py -S es -D es TuVideo.mp4
+**2.English**
+C:\Python27\python.exe C:\Python27\scripts\autosub_app.py -S en -D en YouVideo.mp4
+**3.Japanese**
+C:\Python27\python.exe C:\Python27\scripts\autosub_app.py -S ja -D ja YouAnimeVideo.mp4
+ 
+----------------------------
+Optional
+Compile script Python(Exe Executable)
+C:\Python27\python.exe -m compileall C:\Python27\scripts\autosub_app.py
+Run
+C:\Python27\scripts\autosub_app.pyc YouVideo.mp4 (English Default)
+Upgrade Pip
+python -m pip install --upgrade pip
+-----------------------------------
+
+
 
 
 
