--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -58,6 +58,14 @@ python -m pip install --upgrade pip
 -----------------------------------
 
 
+# 添加到右键快捷方式
+![autosub_app.zip](../../.local/static/2020/4/3/autosub_app.0.3.12.1590583198169.zip)
+Create batch by language (JA) AutoSub_Jap.bat and copy to directory SendTo
+"shell:sendto"
+"%APPDATA%\Microsoft\Windows\SendTo"
+AutoSub_Jap.bat
+C:\Python27\python.exe C:\Python27\Scripts\autosub_app.py -C 2 -S ja -D ja %1
+
 
 
 
