--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -65,6 +65,8 @@ Create batch by language (JA) AutoSub_Jap.bat and copy to directory SendTo
 "%APPDATA%\Microsoft\Windows\SendTo"
 AutoSub_Jap.bat
 C:\Python27\python.exe C:\Python27\Scripts\autosub_app.py -C 2 -S ja -D ja %1
+![右键](../../.local/static/2020/4/3/右键菜单.1590583409726.png)
+
 
 
 
