--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -40,22 +40,22 @@ Copy ffmpeg.exe to C:\Python27\
 ![测试成功](../../.local/static/2020/4/3/安装python.1590582921022.png)
 
 # **自动生成字幕**
+-----------------------------------
 **1.Spanish**
 C:\Python27\python.exe C:\Python27\scripts\autosub_app.py -S es -D es TuVideo.mp4
 **2.English**
 C:\Python27\python.exe C:\Python27\scripts\autosub_app.py -S en -D en YouVideo.mp4
 **3.Japanese**
 C:\Python27\python.exe C:\Python27\scripts\autosub_app.py -S ja -D ja YouAnimeVideo.mp4
- 
-----------------------------
-Optional
+-----------------------------------
+*Optional
 Compile script Python(Exe Executable)
 C:\Python27\python.exe -m compileall C:\Python27\scripts\autosub_app.py
 Run
 C:\Python27\scripts\autosub_app.pyc YouVideo.mp4 (English Default)
 Upgrade Pip
-python -m pip install --upgrade pip
------------------------------------
+python -m pip install --upgrade pip*
+
 
 
 # 添加到右键快捷方式
@@ -65,8 +65,10 @@ Create batch by language (JA) AutoSub_Jap.bat and copy to directory SendTo
 "%APPDATA%\Microsoft\Windows\SendTo"
 AutoSub_Jap.bat
 C:\Python27\python.exe C:\Python27\Scripts\autosub_app.py -C 2 -S ja -D ja %1
-![右键](../../.local/static/2020/4/3/右键菜单.1590583409726.png)
+![右键菜单](../../.local/static/2020/4/3/右键菜单.1590583409726.png)
 
+# 字幕翻译软件 Subtitles
+Download [Subtitle Edit ](https://github.com/SubtitleEdit/subtitleedit/releases)
 
 
 
