--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -67,8 +67,14 @@ AutoSub_Jap.bat
 C:\Python27\python.exe C:\Python27\Scripts\autosub_app.py -C 2 -S ja -D ja %1
 ![右键菜单](../../.local/static/2020/4/3/右键菜单.1590583409726.png)
 
-# 字幕翻译软件 Subtitles
-Download [Subtitle Edit ](https://github.com/SubtitleEdit/subtitleedit/releases)
+# **字幕翻译软件 Subtitle Edit** 
+Download [Subtitle Edit](https://github.com/SubtitleEdit/subtitleedit/releases)
+Run SubtitleEdit.exe
+Open Subtitle (TuVideo.srt,YouAnimeVideo.srt,YouVideo)
+Menu-Auto-Translate-(PowerbyGoogle)
+From(Japanese) To:English
+Translate
+![ ](../../.local/static/2020/4/3/字幕翻译.1590583691452.png)
 
 
 
