--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -1,9 +1,8 @@
 # 相关软件下载
 [Python](https://www.python.org/ftp/python/2.7.12/python-2.7.12.msi)
 [FFMPEG](https://ffmpeg.zeranoe.com/builds/)
-AutoInstall autosub_app 0.3.12.zip
-SampleVideos Spanish - English.zip
-Subtitle Editor Aegisub
+[AutoInstall](https://pypi.org/project/autosub/)
+![Subtitle Editor Aegisub](../../.local/static/2020/4/3/SubtitleEdit-3.5.15-Setup.1590584106858.zip)
 
 
 # **安装教程**
@@ -37,6 +36,7 @@ Copy ffmpeg.exe to C:\Python27\
 ## **6.Restart Windows**
 
 ## **7.Test Script C:\Python27\python.exe C:\Python27\scripts\autosub_app.py --list-languages**
+
 ![测试成功](../../.local/static/2020/4/3/安装python.1590582921022.png)
 
 # **自动生成字幕**
@@ -60,11 +60,13 @@ python -m pip install --upgrade pip*
 
 # 添加到右键快捷方式
 ![autosub_app.zip](../../.local/static/2020/4/3/autosub_app.0.3.12.1590583198169.zip)
+
 Create batch by language (JA) AutoSub_Jap.bat and copy to directory SendTo
 "shell:sendto"
 "%APPDATA%\Microsoft\Windows\SendTo"
 AutoSub_Jap.bat
 C:\Python27\python.exe C:\Python27\Scripts\autosub_app.py -C 2 -S ja -D ja %1
+
 ![右键菜单](../../.local/static/2020/4/3/右键菜单.1590583409726.png)
 
 # **字幕翻译软件 Subtitle Edit** 
