--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -40,7 +40,7 @@ Copy ffmpeg.exe to C:\Python27\
 
 ## **7.Test Script C:\Python27\python.exe C:\Python27\scripts\autosub_app.py --list-languages**
 
-![测试成功](../../.local/static/2020/4/3/安装python.1590582921022.png)
+![测试成功](../../.local/static/2020/4/3/02.1590584796383.png)
 
 # **自动生成字幕**
 -----------------------------------
