--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -1,5 +1,5 @@
 # 相关软件下载
-[Python](https://www.python.org/ftp/python/2.7.12/python-2.7.12.msi)
+[Python](https://www.python.org/ftp/python)
 
 [FFMPEG](https://ffmpeg.zeranoe.com/builds/)
 
@@ -13,12 +13,11 @@
 ![title](../../.local/static/2020/4/3/安装python.1590582082788.png)
 
 ## **2.Run cmd (Win+R)**
-C:\Python27\Scripts\pip.exe install autosub
-Or
-C:\Python27\Scripts\pip.exe install https://pypi.python.org/packages/35/7b/9d5361c0f7abfcc6d826a5279b1c4501f7616505629f6c54857587ec6e37/autosub-0.3.9.tar.gz
+**C:\Python27\Scripts\pip.exe install autosub**
+// 自己python的安装目录\Scripts\pip.exe install autosub
 or
 [Download Last version autosub ](https://pypi.python.org/pypi/autosub)
-C:\Python27\Scripts\pip.exe install "c:\youdownloaded\autosub-0.3.9.tar.gz"
+C:\Python27\Scripts\pip.exe install "c:\youdownloaded\autosub-0.3.9.tar.gz"    //0.3.9更改为最新版本号
 
 ## **3.修改文件名  "autosub" to "autosub_app.py"**
 ------cmd命令  C:\Python27\Scripts\autosub autosub_app.py--------
