--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -5,7 +5,7 @@
 
 [AutoInstall](https://pypi.org/project/autosub/)
 
-![Subtitle Editor Aegisub](../../.local/static/2020/4/3/SubtitleEdit-3.5.15-Setup.1590584106858.zip)
+![Subtitle Editor Aegisub]
 
 
 # **安装教程**
@@ -14,7 +14,7 @@
 
 ## **2.Run cmd (Win+R)**
 **C:\Python27\Scripts\pip.exe install autosub**
-// 自己python的安装目录\Scripts\pip.exe install autosub
+// 自己python的安装目录
 or
 [Download Last version autosub ](https://pypi.python.org/pypi/autosub)
 C:\Python27\Scripts\pip.exe install "c:\youdownloaded\autosub-0.3.9.tar.gz"    //0.3.9更改为最新版本号
