--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -5,8 +5,7 @@
 
 [AutoInstall](https://pypi.org/project/autosub/)
 
-![Subtitle Editor Aegisub]
-
+![Subtitle Editor Aegisub](https://raw.githubusercontent.com/disturb-yy/GitNote-image/master/gitnote/2020/05/30/SubtitleEdit-3.5.15-Setup-1590830243728.zip?token=AJGNWAVWU77UYOMSDUM3L2S62ISP2)
 
 # **安装教程**
 ## **1.安装python**
