--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -26,10 +26,10 @@ C:\Python27\Scripts\pip.exe install "c:\youdownloaded\autosub-0.3.9.tar.gz"    /
 temp = tempfile.NamedTemporaryFile(suffix='.flac')
 修改成
 temp = tempfile.NamedTemporaryFile(suffix='.flac'**, delete=False**)
-### 4.2 删除53行的os.system('stty sane'). (Optional)
-### 4.3 Line 127 change
+### 4.2 修改127行
 exe_file = os.path.join(path, program)
-exe_file = os.path.join(path, program** + ".exe"**)
+修改成
+exe_file = os.path.join(path, program** + ".exe")
 ## **5.ffmpeg布置**
 Download(https://ffmpeg.zeranoe.com/builds/) and
 Copy ffmpeg.exe to C:\Python27\
