--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -29,10 +29,9 @@ temp = tempfile.NamedTemporaryFile(suffix='.flac'**, delete=False**)
 ### 4.2 修改127行
 exe_file = os.path.join(path, program)
 修改成
-exe_file = os.path.join(path, program** + ".exe")
+exe_file = os.path.join(path, program + ".exe")
 ## **5.ffmpeg布置**
-Download(https://ffmpeg.zeranoe.com/builds/) and
-Copy ffmpeg.exe to C:\Python27\
+下载(https://ffmpeg.zeranoe.com/builds/) 并复制bin\ffmpeg.exe to C:\Python27\
 
 ## **6.Restart Windows**
 
