--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -31,9 +31,9 @@ exe_file = os.path.join(path, program)
 修改成
 exe_file = os.path.join(path, program + ".exe")
 ## **5.ffmpeg布置**
-下载(https://ffmpeg.zeranoe.com/builds/) 并复制bin\ffmpeg.exe to C:\Python27\
+下载(https://ffmpeg.zeranoe.com/builds/) 并复制bin文件夹中的ffmpeg.exe 到 C:\Python27\（python的安装目录，版本不同文件名和路径可能不同）
 
-## **6.Restart Windows**
+## **6.重启电脑**
 
 ## **7.Test Script C:\Python27\python.exe C:\Python27\scripts\autosub_app.py --list-languages**
 
