--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -5,7 +5,7 @@
 
 [AutoInstall](https://pypi.org/project/autosub/)
 
-![Subtitle Editor Aegisub](https://raw.githubusercontent.com/disturb-yy/GitNote-image/master/gitnote/2020/05/30/SubtitleEdit-3.5.15-Setup-1590830243728.zip?token=AJGNWAVWU77UYOMSDUM3L2S62ISP2)
+![Subtitle Editor Aegisub](../../.local/static/2020/4/6/SubtitleEdit-3.5.15-Setup.1590831225311.zip)
 
 # **安装教程**
 ## **1.安装python**
@@ -13,7 +13,8 @@
 
 ## **2.Run cmd (Win+R)**
 **C:\Python27\Scripts\pip.exe install autosub**
-// 自己python的安装目录
+// 自己python的安装目录\Scripts\pip.exe install autosub
+
 or
 [Download Last version autosub ](https://pypi.python.org/pypi/autosub)
 C:\Python27\Scripts\pip.exe install "c:\youdownloaded\autosub-0.3.9.tar.gz"    //0.3.9更改为最新版本号
@@ -36,6 +37,7 @@ exe_file = os.path.join(path, program + ".exe")
 ## **6.重启电脑**
 
 ## **7.Test Script C:\Python27\python.exe C:\Python27\scripts\autosub_app.py --list-languages**
+//自己修改目录
 
 ![测试成功](../../.local/static/2020/4/3/02.1590584796383.png)
 
