--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -12,15 +12,15 @@
 ![title](../../.local/static/2020/4/3/安装python.1590582082788.png)
 
 ## **2.Run cmd (Win+R)**
-**C:\Python27\Scripts\pip.exe install autosub**
+**C:\Python39\Scripts\pip.exe install autosub**
 // 自己python的安装目录\Scripts\pip.exe install autosub
 
 or
 [Download Last version autosub ](https://pypi.python.org/pypi/autosub)
-C:\Python27\Scripts\pip.exe install "c:\youdownloaded\autosub-0.3.9.tar.gz"    //0.3.9更改为最新版本号
+C:\Python39\Scripts\pip.exe install "c:\youdownloaded\autosub-0.3.9.tar.gz"    //0.3.9更改为最新版本号
 
 ## **3.修改文件名  "autosub" to "autosub_app.py"**
-------cmd命令  C:\Python27\Scripts\autosub autosub_app.py--------
+------cmd命令  rename C:\Python39\Scripts\autosub autosub_app.py--------
 
 ## **4.修改autosub_app.py文件**
 ### 4.1 在47行添加", delete=False"
