--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -36,11 +36,11 @@ exe_file = os.path.join(path, program + ".exe")
 
 ## **6.重启电脑**
 
-## **7.Test Script C:\Python27\python.exe C:\Python27\scripts\autosub_app.py --list-languages**
+## **7.Test Script**
+-----------------------------------
+C:\Python39\python.exe C:\Python39\scripts\autosub_app.py --list-languages
+-----------------------------------
 //自己修改目录
--------------------------------------------------
-C:\Users\83573\AppData\Local\Programs\Python\Python39\python.exe C:\Users\83573\AppData\Local\Programs\Python\Python39\scripts\autosub_app.py --list-languages
--------------------------------------------------
 
 ![测试成功](../../.local/static/2020/4/3/02.1590584796383.png)
 
