--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -11,13 +11,11 @@
 ## **1.安装python**
 ![title](../../.local/static/2020/4/3/安装python.1590582082788.png)
 
-## **2.Run cmd (Win+R)**
-**C:\Python39\Scripts\pip.exe install autosub**
-// 自己python的安装目录\Scripts\pip.exe install autosub
-
-or
-[Download Last version autosub ](https://pypi.python.org/pypi/autosub)
-C:\Python39\Scripts\pip.exe install "c:\youdownloaded\autosub-0.3.9.tar.gz"    //0.3.9更改为最新版本号
+## 2.Run cmd (Win+R)
+![autosub-0.3.12.tar.gz](../../.local/static/2020/4/6/autosub-0.3.12.tar.1590834543658.gz)
+--------------------------------
+C:\Python39\Scripts\pip.exe install "D:\File\下载\Programs\important\字幕生成\autosub-0.3.12.tar.gz"
+--------------------------------
 
 ## **3.修改文件名  "autosub" to "autosub_app.py"**
 ------cmd命令  rename C:\Python39\Scripts\autosub autosub_app.py--------
