--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -8,8 +8,8 @@
 ![Subtitle Editor Aegisub](../../.local/static/2020/4/6/SubtitleEdit-3.5.15-Setup.1590831225311.zip)
 
 # **安装教程**
-## **1.安装python**
-![title](../../.local/static/2020/4/3/安装python.1590582082788.png)
+## 1.安装python
+![python](../../.local/static/2020/4/3/安装python.1590582082788.png)
 
 ## 2.Run cmd (Win+R)
 ![autosub-0.3.12.tar.gz](../../.local/static/2020/4/6/autosub-0.3.12.tar.1590834543658.gz)
@@ -17,8 +17,11 @@
 C:\Python39\Scripts\pip.exe install "D:\File\下载\Programs\important\字幕生成\autosub-0.3.12.tar.gz"
 --------------------------------
 
-## **3.修改文件名  "autosub" to "autosub_app.py"**
-------cmd命令  rename C:\Python39\Scripts\autosub autosub_app.py--------
+## 3.修改文件名  "autosub" to "autosub_app.py"
+cmd命令 
+------------------------
+rename C:\Python39\Scripts\autosub autosub_app.py
+------------------------
 
 ## **4.修改autosub_app.py文件**
 ### 4.1 在47行添加", delete=False"
