--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -27,7 +27,7 @@ rename C:\Python39\Scripts\autosub autosub_app.py
 ### 4.1 在47行添加", delete=False"
 temp = tempfile.NamedTemporaryFile(suffix='.flac')
 修改成
-temp = tempfile.NamedTemporaryFile(suffix='.flac'**, delete=False**)
+temp = tempfile.NamedTemporaryFile(suffix='.flac', delete=False)
 ### 4.2 修改127行
 exe_file = os.path.join(path, program)
 修改成
