--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -1,5 +1,5 @@
 # 相关软件下载
-[Python](https://www.python.org/ftp/python)
+[Python](https://www.python.org/ftp/python/2.7.9/python-2.7.9.msi)
 
 [FFMPEG](https://ffmpeg.zeranoe.com/builds/)
 
