--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -1,5 +1,5 @@
 # 相关软件下载
-[Python](https://www.python.org/ftp/python/2.7.9/python-2.7.9.msi)
+[Python](https://www.python.org/ftp/python/2.7.12/python-2.7.12.msi)
 
 [FFMPEG](https://ffmpeg.zeranoe.com/builds/)
 
@@ -9,12 +9,12 @@
 
 # **安装教程**
 ## 1.安装python
-![python](../../.local/static/2020/4/3/安装python.1590582082788.png)
+![安装python](../../.local/static/2020/4/6/aa.1590837800253.png)
 
 ## 2.Run cmd (Win+R)
 ![autosub-0.3.12.tar.gz](../../.local/static/2020/4/6/autosub-0.3.12.tar.1590834543658.gz)
 --------------------------------
-C:\Python39\Scripts\pip.exe install "D:\File\下载\Programs\important\字幕生成\autosub-0.3.12.tar.gz"
+C:\Python27\Scripts\pip.exe install "D:\File\下载\Programs\important\字幕生成\autosub-0.3.12.tar.gz"
 --------------------------------
 
 ## 3.修改文件名  "autosub" to "autosub_app.py"
