--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -14,7 +14,7 @@
 ## 2.Run cmd (Win+R)
 ![autosub-0.3.12.tar.gz](../../.local/static/2020/4/6/autosub-0.3.12.tar.1590834543658.gz)
 --------------------------------
-C:\Python27\Scripts\pip.exe install "D:\File\下载\Programs\important\字幕生成\autosub-0.3.12.tar.gz"
+C:\Python27\Scripts\pip.exe install "‪‪D:\File\desk\autosub-0.3.12.tar.gz"
 --------------------------------
 
 ## 3.修改文件名  "autosub" to "autosub_app.py"
