--- a/教程/字幕自动生成/使用教程.md
+++ b/教程/字幕自动生成/使用教程.md
@@ -24,7 +24,7 @@ rename C:\Python27\Scripts\autosub autosub_app.py
 ------------------------
 
 ## **4.修改autosub_app.py文件**
-### 4.1 在47行添加", delete=False"
+### 4.1 在48行添加", delete=False"
 temp = tempfile.NamedTemporaryFile(suffix='.flac')
 修改成
 temp = tempfile.NamedTemporaryFile(suffix='.flac', delete=False)
@@ -33,7 +33,7 @@ exe_file = os.path.join(path, program)
 修改成
 exe_file = os.path.join(path, program + ".exe")
 ## **5.ffmpeg布置**
-下载(https://ffmpeg.zeranoe.com/builds/) 并复制bin文件夹中的ffmpeg.exe 到 C:\Python27\（python的安装目录，版本不同文件名和路径可能不同）
+下载(https://ffmpeg.zeranoe.com/builds/) 并复制bin文件夹中的ffmpeg.exe 到 C:\Python27\
 
 ## **6.重启电脑**
 
